<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <DUT Name="DUT_Mode_Status" Id="{c743ab37-e034-4650-8442-98a26f5f1937}">
    <Declaration><![CDATA[TYPE DUT_Mode_Status :
STRUCT
    Active_Mode             : UINT;
    Mode_Name               : STRING(30);
    Mode_Ready              : BOOL;
    Mode_Transitioning      : BOOL;
    Status_Message          : STRING(100);
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>