<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <GVL Name="GVL_LoadBank_Persistent" Id="{ddf76703-cd3a-40a1-a8a8-3d95d44d09c0}">
    <Declaration><![CDATA[// ============================================
// GVL_LoadBank_Persistent
// UPDATED: Added debounce times and phase monitor
// ============================================

VAR_GLOBAL PERSISTENT

    // ============================================
    // TEMPERATURE CONFIG (ENG Page)
    // ============================================
    LB_OUTLET_WARNING_TEMP      : REAL := 350.0;
    LB_OUTLET_MAXIMUM_TEMP      : REAL := 400.0;
    LB_TC_OPEN_LIMIT            : REAL := 700.0;
    LB_TC_SHORT_LIMIT           : REAL := -50.0;
    
    LB_INLET_WARNING_TEMP       : REAL := 50.0;
    LB_INLET_MAXIMUM_TEMP       : REAL := 75.0;
    LB_INLET_TC_ENABLED         : BOOL := TRUE;

    // ============================================
    // FAN CONTROL (ENG Page)
    // ============================================
    LB_FAN_PRESSURIZE_TIME      : TIME := T#5s;
    LB_FAN_COOLDOWN_TIME        : TIME := T#180s;
    LB_FAN_FEEDBACK_TIMEOUT     : TIME := T#3s;
    LB_FAN_POST_DUMP_DELAY      : TIME := T#5s;
    LB_ENABLE_PHYSICAL_FAN      : BOOL := FALSE;

    // ============================================
    // FAN DEBOUNCE TIMES (ENG Page) - NEW
    // ============================================
    LB_DEBOUNCE_PRESSURE        : TIME := T#300ms;      // Pressure sensor debounce
    LB_DEBOUNCE_CONTACTOR       : TIME := T#300ms;      // Contactor feedback debounce
    LB_DEBOUNCE_OVERLOAD        : TIME := T#100ms;      // Motor overload debounce

    // ============================================
    // PHASE MONITOR (ENG Page) - NEW
    // ============================================
    LB_ENABLE_PHASE_MONITOR     : BOOL := FALSE;        // Enable phase monitor check

    // ============================================
    // MAIN CONTACTOR (ENG Page)
    // ============================================
    LB_MAIN_CONTACTOR_FB_TIMEOUT : TIME := T#3s;

    // ============================================
    // CONTROLLED EMERGENCY DUMP (ENG Page)
    // Fan uses short delay (LB_FAN_POST_DUMP_DELAY) after dump
    // ============================================
    LB_EMG_DUMP_PERCENT         : REAL := 10.0;
    LB_EMG_DUMP_STEP_TIME       : TIME := T#1s;

    // ============================================
    // OVER TEMPERATURE DUMP (ENG Page)
    // Fan uses full cooldown (LB_FAN_COOLDOWN_TIME) after dump
    // ============================================
    LB_TEMP_DUMP_PERCENT        : REAL := 10.0;
    LB_TEMP_DUMP_STEP_TIME      : TIME := T#2s;

    // ============================================
    // DUMP TIMEOUT (ENG Page)
    // ============================================
    LB_DUMP_TIMEOUT             : TIME := T#30s;

    // ============================================
    // LOAD CONTROL
    // ============================================
    LB_AUTO_LEVEL_DEADBAND      : REAL := 5.0;
    LB_AUTO_LEVEL_HYSTERESIS    : REAL := 2.0;
    LB_STEP_UP_DELAY            : TIME := T#500ms;
    LB_STEP_DOWN_DELAY          : TIME := T#500ms;

    // ============================================
    // FEEDBACK MONITORING (ENG Page)
    // ============================================
    LB_ENABLE_FEEDBACK_MONITORING : BOOL := FALSE;
    LB_FEEDBACK_TIMEOUT           : TIME := T#3s;

    // ============================================
    // POWER MONITORING (ENG Page)
    // ============================================
    LB_ENABLE_POWER_MONITORING  : BOOL := FALSE;
    LB_POWER_TOLERANCE_PERCENT  : REAL := 5.0;
    LB_POWER_MONITOR_DELAY      : TIME := T#10s;

    // ============================================
    // VOLTAGE IMBALANCE (ENG Page)
    // ============================================
    LB_VOLTAGE_TOLERANCE        : REAL := 5.0;
    LB_V_IMBALANCE_WARNING      : REAL := 1.0;
    LB_V_IMBALANCE_CRITICAL     : REAL := 2.0;

    // ============================================
    // CURRENT IMBALANCE (ENG Page)
    // ============================================
    LB_I_IMBALANCE_WARNING      : REAL := 1.0;
    LB_I_IMBALANCE_CRITICAL     : REAL := 2.0;

    // ============================================
    // DATA LOGGER (ENG Page)
    // ============================================
    LB_LOG_ENABLE               : BOOL := TRUE;
    LB_USB_LOG_ENABLE           : BOOL := TRUE;
    LB_LOG_SAMPLE_TIME          : TIME := T#10s;
    LB_TREND_BUFFER_SIZE        : UINT := 360;
    LB_USB_LOG_PATH             : STRING(100) := 'C:\DataLog\';

    // ============================================
    // HMI DISPLAY CONFIG (ENG Page)
    // ============================================
    LB_HMI_Config_Mode_Auto     : BOOL := TRUE;
    LB_HMI_Config_Mode_Reverse  : BOOL := FALSE;
    LB_HMI_Config_Mode_Manual   : BOOL := FALSE;

    // ============================================
    // HMI THEME (Customer Page)
    // ============================================
    LB_HMI_Dark_Mode            : BOOL := FALSE;

    // ============================================
    // MAINTENANCE MODE CONFIG (ENG Page)
    // ============================================
    LB_Maint_Test_Duration_Sec  : INT := 30;
    Maint_Mode_Power_Tolerance_Percent  : REAL := 10.0;
    Maint_Mode_Feedback_Timeout_ms      : UINT := 2000;     // Changed to UINT
    Maint_Mode_Test_Duration_Sec        : UINT := 5;        // Changed to UINT
    
    // ============================================
    // MASTER ENABLE CONFIG (ENG Page)
    // ============================================
    LB_ENABLE_PHYSICAL_MASTER   : BOOL := FALSE;
    
    // ============================================
    // Engineer Login Credentials
    // ============================================
    HMI_Eng_Username        : STRING(20) := 'eng';
    HMI_Eng_Password        : STRING(20) := 'loadbank2025';
    HMI_Eng_Timeout_Min     : INT := 10;

END_VAR
]]></Declaration>
  </GVL>
</TcPlcObject>
