<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.16">
  <POU Name="PRG_Maint_Mode" Id="{01fe2f35-2dd2-4683-9cd1-0a64280297d8}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PRG_Maint_Mode
// ============================================
// MAINTENANCE MODE PROGRAM
// Called from PRG_Main
// ============================================

VAR
    // Manual test edge detection
    Toggle_Step_Prev        : BOOL;
    Toggle_Fan_Prev         : BOOL;
    Reset_Test_Prev         : BOOL;
    Self_Test_Start_Prev    : BOOL;
    Self_Test_Stop_Prev     : BOOL;
    
    // Self test state machine
    Self_Test_State         : INT := 0;
    Feedback_Wait_Timer_ms  : INT := 0;
    Delay_Timer_ms          : INT := 0;
    Second_Counter_ms       : INT := 0;
    
    // Cycle time in ms (adjust to your task cycle)
    Cycle_Time_ms           : INT := 10;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[
// ============================================
// PROGRAM BODY
// ============================================

// Only run when in maintenance mode
IF LB_System_Status.Active_Mode = LB_MODE_MAINTENANCE THEN

    // ========================================
    // MANUAL FAN TOGGLE (rising edge)
    // ========================================
    IF Maint_Mode_Toggle_Fan AND NOT Toggle_Fan_Prev THEN
        IO_Fan_Contactor_Coil := NOT IO_Fan_Contactor_Coil;
    END_IF;
    Toggle_Fan_Prev := Maint_Mode_Toggle_Fan;
    
    // ========================================
    // MANUAL STEP TOGGLE (rising edge)
    // ========================================
    IF Maint_Mode_Toggle_Step AND NOT Toggle_Step_Prev THEN
        // Interlock: Fan must be running
        IF IO_Fan_Contactor_FB AND IO_Fan_Pressure_OK THEN
            IO_Load_Contactor_Coil[Maint_Mode_Selected_Step] := 
                NOT IO_Load_Contactor_Coil[Maint_Mode_Selected_Step];
        END_IF;
    END_IF;
    Toggle_Step_Prev := Maint_Mode_Toggle_Step;
    
    // ========================================
    // RESET TEST (rising edge)
    // ========================================
    IF Maint_Mode_Reset_Test AND NOT Reset_Test_Prev THEN
        IO_Load_Contactor_Coil[Maint_Mode_Selected_Step] := FALSE;
        Maint_Mode_Feedback_Match := TRUE;
        Maint_Mode_Response_Time_ms := 0;
        Maint_Mode_Power_Within_Tolerance := TRUE;
    END_IF;
    Reset_Test_Prev := Maint_Mode_Reset_Test;
    
    // ========================================
    // FEEDBACK MATCH CHECK (continuous)
    // ========================================
    IF IO_Load_Contactor_Coil[Maint_Mode_Selected_Step] THEN
        Maint_Mode_Feedback_Match := 
            IO_Load_Contactor_Coil[Maint_Mode_Selected_Step] = 
            IO_Load_Contactor_FB[Maint_Mode_Selected_Step];
        
        // Power tolerance check
        IF LB_HMI_Steps[Maint_Mode_Selected_Step].Rated_Power_kW > 0 THEN
            Maint_Mode_Power_Within_Tolerance := 
                ABS(LB_HMI_Steps[Maint_Mode_Selected_Step].Power_Error_Percent) 
                <= Maint_Mode_Power_Tolerance_Percent;
        END_IF;
    END_IF;
    
    // ========================================
    // SELF TEST STATE MACHINE
    // ========================================
    
    // Start command (rising edge)
    IF Maint_Mode_Self_Test_Start AND NOT Self_Test_Start_Prev THEN
        IF NOT Maint_Mode_Self_Test_Running THEN
            // Check interlocks
            IF IO_Fan_Contactor_FB AND IO_Fan_Pressure_OK AND NOT IO_Fan_Motor_Overload_OK THEN
                Maint_Mode_Self_Test_Running := TRUE;
                Maint_Mode_Self_Test_Current_Step := 1;
                Maint_Mode_Self_Test_Pass_Count := 0;
                Maint_Mode_Self_Test_Fail_Count := 0;
                Maint_Mode_Self_Test_Complete := FALSE;
                Maint_Mode_Timeout_Error_Count := 0;
                Self_Test_State := 10;
            END_IF;
        END_IF;
    END_IF;
    Self_Test_Start_Prev := Maint_Mode_Self_Test_Start;
    
    // Stop command (rising edge)
    IF Maint_Mode_Self_Test_Stop AND NOT Self_Test_Stop_Prev THEN
        IF Maint_Mode_Self_Test_Running THEN
            IO_Load_Contactor_Coil[Maint_Mode_Self_Test_Current_Step] := FALSE;
            Maint_Mode_Self_Test_Running := FALSE;
            Self_Test_State := 0;
        END_IF;
    END_IF;
    Self_Test_Stop_Prev := Maint_Mode_Self_Test_Stop;
    
    // State machine
    CASE Self_Test_State OF
        
        0: // IDLE
            ; // Do nothing, wait for start
            
        10: // START NEXT STEP
            IF Maint_Mode_Self_Test_Current_Step <= LB_HMI_Total_Steps THEN
                // Skip quarantined steps
                IF LB_HMI_Steps[Maint_Mode_Self_Test_Current_Step].Status_Quarantined THEN
                    Maint_Mode_Self_Test_Current_Step := Maint_Mode_Self_Test_Current_Step + 1;
                ELSE
                    // Start testing this step
                    IO_Load_Contactor_Coil[Maint_Mode_Self_Test_Current_Step] := TRUE;
                    Maint_Mode_Self_Test_Timer_Sec := Maint_Mode_Test_Duration_Sec;
                    Feedback_Wait_Timer_ms := 0;
                    Second_Counter_ms := 0;
                    Self_Test_State := 20;
                END_IF;
            ELSE
                // All steps tested
                Self_Test_State := 100;
            END_IF;
            
        20: // WAIT FOR FEEDBACK
            Feedback_Wait_Timer_ms := Feedback_Wait_Timer_ms + Cycle_Time_ms;
            
            IF IO_Load_Contactor_FB[Maint_Mode_Self_Test_Current_Step] THEN
                // Feedback received
                Maint_Mode_Response_Time_ms := Feedback_Wait_Timer_ms;
                Maint_Mode_Feedback_Match := TRUE;
                Self_Test_State := 30;
            ELSIF Feedback_Wait_Timer_ms > Maint_Mode_Feedback_Timeout_ms THEN
                // Timeout - FAIL
                Maint_Mode_Timeout_Error_Count := Maint_Mode_Timeout_Error_Count + 1;
                Maint_Mode_Feedback_Match := FALSE;
                Self_Test_State := 90;
            END_IF;
            
        30: // MONITOR POWER FOR DURATION
            // Second countdown
            Second_Counter_ms := Second_Counter_ms + Cycle_Time_ms;
            IF Second_Counter_ms >= 1000 THEN
                Second_Counter_ms := 0;
                Maint_Mode_Self_Test_Timer_Sec := Maint_Mode_Self_Test_Timer_Sec - 1;
            END_IF;
            
            // Check power tolerance continuously
            IF LB_HMI_Steps[Maint_Mode_Self_Test_Current_Step].Rated_Power_kW > 0 THEN
                Maint_Mode_Power_Within_Tolerance := 
                    ABS(LB_HMI_Steps[Maint_Mode_Self_Test_Current_Step].Power_Error_Percent) 
                    <= Maint_Mode_Power_Tolerance_Percent;
            END_IF;
            
            // Check feedback still matches
            Maint_Mode_Feedback_Match := 
                IO_Load_Contactor_FB[Maint_Mode_Self_Test_Current_Step];
            
            // Test duration complete?
            IF Maint_Mode_Self_Test_Timer_Sec <= 0 THEN
                IF Maint_Mode_Power_Within_Tolerance AND Maint_Mode_Feedback_Match THEN
                    Self_Test_State := 80; // PASS
                ELSE
                    Self_Test_State := 90; // FAIL
                END_IF;
            END_IF;
            
        80: // STEP PASSED
            LB_HMI_Steps[Maint_Mode_Self_Test_Current_Step].Status_Quarantined := FALSE;
            Maint_Mode_Self_Test_Pass_Count := Maint_Mode_Self_Test_Pass_Count + 1;
            IO_Load_Contactor_Coil[Maint_Mode_Self_Test_Current_Step] := FALSE;
            Delay_Timer_ms := 0;
            Self_Test_State := 85;
            
        85: // DELAY BEFORE NEXT STEP
            Delay_Timer_ms := Delay_Timer_ms + Cycle_Time_ms;
            IF Delay_Timer_ms >= 1000 THEN
                Maint_Mode_Self_Test_Current_Step := Maint_Mode_Self_Test_Current_Step + 1;
                Self_Test_State := 10;
            END_IF;
            
        90: // STEP FAILED - QUARANTINE
            LB_HMI_Steps[Maint_Mode_Self_Test_Current_Step].Status_Quarantined := TRUE;
            Maint_Mode_Self_Test_Fail_Count := Maint_Mode_Self_Test_Fail_Count + 1;
            LB_HMI_Quarantined_Count := LB_HMI_Quarantined_Count + 1;
            IO_Load_Contactor_Coil[Maint_Mode_Self_Test_Current_Step] := FALSE;
            Delay_Timer_ms := 0;
            Self_Test_State := 85;
            
        100: // ALL STEPS COMPLETE
            Maint_Mode_Self_Test_Running := FALSE;
            Maint_Mode_Self_Test_Complete := TRUE;
            Self_Test_State := 0;
            
    END_CASE;

ELSE
    // ========================================
    // NOT IN MAINTENANCE MODE - Safety reset
    // ========================================
    IF Maint_Mode_Self_Test_Running THEN
        IO_Load_Contactor_Coil[Maint_Mode_Self_Test_Current_Step] := FALSE;
        Maint_Mode_Self_Test_Running := FALSE;
        Self_Test_State := 0;
    END_IF;
    
END_IF;]]></ST>
    </Implementation>
    <LineIds Name="PRG_Maint_Mode">
      <LineId Id="29" Count="191" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>